# cli-task-manager

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DELIVERY.txt  DEMO.md  Dockerfile  FIRST_RUN.md  INDEX.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
task_manager/: __init__.py  cli.py  config.py  database.py  exporter.py  logger.py  models.py  renderers.py  validators.py
task_manager/commands/: __init__.py  bulk_cmds.py  export_cmds.py  filter_cmds.py  project_cmds.py  task_cmds.py
tests/: __init__.py  test_cli.py  test_database.py  test_exporter.py  test_models.py  test_validators.py
